# cv64-modding

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yml
asm/: extern.asm  main.asm  sections.asm
assets/custom_test_grid/: custom_test_grid.c
docs/: index.md  yaml.md
include/: crash_screen.h  cv64.h  mod.h
include/game/: actor_settings.h  collision.h  controller.h  debug.h  system_work.h
include/game/objects/player/: enemyTargetGfx.h  player.h  player_flags.h
linker/: extern.ld  linker.ld
src/objects/: entrypoints.c  obj1.c  obj2.c
src/objects/obj_test/: README.md  obj_test.c  obj_test.h
src/sec_custom/: hooks.c
src/static/: static_segment.c
tools/: binary_files_setup.py  calcchecksum.py  compile_binaries.py  cv64_file_insert.py  inject_binaries.py  maps_setup.py  object_setup.py  parse_yaml.py
